# raspberry-pi-astrophotography

./: .gitignore  CODEOWNERS  appserver.py  capture.sh  capture_planet.sh  convert.py  dev.sh  gpio.py  log.py  log.txt  logging.json  main.py  motor.py  nsleep.py  pyproject.toml  ra.py  readme.md  run.sh  server.py  sleep.py  solarium.py  stellarium.py  stellarium_wire.py  steps.py  sun.sh  sync.sh  telescope_control.py  update-dec.sh  update-declination.sh  update.sh  update.time_scale.sh  validate.py  vtelescope.py
camera/: kill.sh  package-lock.json  package.json
camera/src/: constants.ts  index.ts
camera/src/Camera/: Canon55d.camera.ts  index.ts
camera/src/Gphoto2/: index.ts  types.ts
camera/src/Lens/: index.ts
camera/src/capture/: index.ts
camera/src/hooks/: lights.sh
camera/src/lenses/: Kit_18_55mm.ts  Kit_75_300mm.ts  Prime_50mm.ts  index.ts
curl/: calibrate_hms_dms.sh  calibrate_name.sh  calibrate_solar_system.sh  goto_hms_dms.sh  goto_solar_system.sh
eqn/: .gitignore  intercept.tex  sageutil.sty
eqn/hack/: clean  watch-latex
gphoto2/: gphoto.py  util.py
handlers/: camera.py  main.py
image-server/: app.py  run.sh
image-server/templates/: index.html
requests/: thunder-collection_Camera.json  thunder-collection_Set One.json  thunder-collection_Telescope Control.json
scripts/: auto.sh  barnards.sh  capture.sh  capture_planet.sh  config.ini  hist-hook.sh  histogram.sh  sun.sh  todo-capture.md
scripts/__archive/: capture_planet.sh
scripts/beta/: capture.sh  config.ini
scripts/hooks/: capture-hook.sh  copy-hook.sh
src/: activity.py  appserver.py  logging.json  main.py  motion.py  stepper.py  telescope_control.py
src/api/: __init__.py  camera.py  capture.py  response.py  telescope.py
src/gphoto2/: canon550d.py  gphoto.py  histogram.sh
src/handlers/: camera.py  response.py
src/lib/: motor.py  nsleep.py  stellarium.py  usbreset.c  usbreset.py
src/scripts/: capture.sh
thundercloud/: thunder-collection_Camera.json  thunder-collection_Telescope Control.json
(+14 files in other folders)
