[tool.poetry]
name = "telescope"
version = "0.1.0"
description = "Controls a 3d Printed, motorized EQ Mount for Astrophotography"
authors = ["Chris Chambers <> Stephen Young<stephen@theyoungs.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
astropy = "^5.3.3"
numpy = "^1.26.0"
rich = "^13.6.0"
requests = "^2.31.0"
pyexiftool = "^0.5.5"
quart = "^0.19.3"
quart-trio = "^0.11.0"
trio = "^0.22.2"
astroquery = "^0.4.6"
typing-extensions = "^4.8.0"

[tool.poetry.group.rpi]
optional = true

[tool.poetry.group.rpi.dependencies]
gpiod = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
